ALLU-166: Kaivuilmoituksiin uusi hinnasto